# xo-ml-HFAgentsCourse-HFModelTest

./: README.md  pyproject.toml  xo.py
rez/: results_2025-02-13_00-08-00.MD
src/: .env.example  menu.py  utilz.py  work1.py
