[project]
name = "xo-ml-hfagentscourse-hfmodeltest"
version = "0.1.0"
description = "Simple Python based HF Models Access via API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
